# recog-nice

./: .gitignore  CMakeLists.txt  DeoPLY.ply  KaffeeInOne_revised.ply  LICENSE  README.md  README.txt  example.hpp  script_cmake.sh  vs_to_cmake.sh
Examples/: CMakeLists
Examples/Final_Exe/: CMakeLists.txt
Examples/RealSense_scanning/: rs-pointcloud.cpp
PCL_CMake_Code/PCL_ply_reader_test/: CMakeLists.txt  PCD2ASC.cpp
RefModelle/: KaffeeInOne_revised.ply  cropbox
SWE/: Makefile  SWE.workspace
SWE/.codelite/: SWE.session  SWE.tags  refactoring.db
SWE/Console/: Console.mk  Console.project  Console.txt  main.cpp
VisualStudio_Projekt/: rs-pointcloud.cpp
VisualStudio_Projekt/PCD2ASC/: CMakeLists.txt  CRealsenseScan.cpp  CRealsenseScan.h  DeoKOPIE.ply  PCD2ASC.cpp  PCD2ASC.sln  PCD2ASC.vcxproj  Processing.cpp  Processing.h  ReferenceModel.cpp  (+24 more)
box/: test1_filter15.ply
ply/: objects.ply  plain.ply  scannedObjectCut.ply  test1_filter15.ply  toilet_paperTransformed.ply
ply2/: cloud.ply  objects.ply  plain.ply  scannedObjectCut.ply  test1_filter15.ply
ply_reader_test/: PCD2ASC.cpp
ref_models/: ball2.ply  ball3.ply  box2.ply  box3.ply  car2.ply  car3.ply
testScans/: ball_1.ply  ball_1_transformed.ply  ball_1_transformed_rot.ply  ball_2.ply  ball_2_transformed.ply  ball_2_transformed_rot.ply  box_1_transformed.ply  box_1_transformed_rot.ply  box_2_transformed.ply  box_2_transformed_new.ply  box_2_transformed_rot.ply  plain_2.ply  result2.ply  result2meshlab.ply  result3out.ply  toilet_paper_2.ply  toilet_paper_transformed.ply
toilet_paper/: plain.ply
(+19 files in other folders)
